--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: default
         
         <!-- Name -->
          <div id="profile_social">
-            <h6>My Social Profiles</h6>
+           <!--  <h6>My Social Profiles</h6> -->
 			
             <a href="{{site.github}}"><i class="fa fa-github"></i></a>
             <!-- <a href="{{site.twitter}}"><i class="fa fa-twitter"></i></a>
@@ -132,16 +132,17 @@ layout: default
             <span class="tite-list">portfolio</span>
             <i class="fa fa-briefcase icon_menu"></i>
         </li>
+         <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
+            <span class="tite-list">contact</span>
+            <i class="fa fa-envelope icon_menu"></i> 
+        </li>
 
       <!--   <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li> -->
 
-        <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
-            <span class="tite-list">contact</span>
-            <i class="fa fa-envelope icon_menu"></i> 
-        </li>
+       
 
        <!--  <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
         <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a> -->
