--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ layout: default
 {% include /portfolio.html %}
 
 
-{% include /blog.html %}
+<!--{% include /blog.html %}-->
 
 {% include /contact.html %}
 
