--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ layout: default
       <!--   <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
-        </li> -->
+        </li>
 
        
 
@@ -161,8 +161,10 @@ layout: default
 
 {% include /portfolio.html %}
 
-{% include /contact.html %}
 
+<!-- {% include /blog.html %}-->
+
+{% include /contact.html %}
 
 
 </div>
