--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ layout: default
 
        
 
-       <!--  <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
+       <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
         <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a> -->
     </ul>
     <!-- /resp-tabs-list -->
@@ -165,6 +165,7 @@ layout: default
 <!-- {% include /blog.html %}-->
 
 {% include /contact.html %}
+
 
 
 </div>
