--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@ layout: default
             <i class="fa fa-envelope icon_menu"></i> 
         </li>
 
-      <!--   <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
+         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 
-       
+       <!--
 
        <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
         <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a> -->
@@ -162,11 +162,10 @@ layout: default
 {% include /portfolio.html %}
 
 
-<!-- {% include /blog.html %}-->
-
 {% include /contact.html %}
 
 
+{% include /blog.html %}
 
 </div>
 <!-- End #resp-tabs-container --> 
