--- a/index.html
+++ b/index.html
@@ -136,16 +136,12 @@ layout: default
             <span class="tite-list">contact</span>
             <i class="fa fa-envelope icon_menu"></i> 
         </li>
-
          <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
-
-       <!--
-
        <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
-        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a> -->
+        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a> 
     </ul>
     <!-- /resp-tabs-list -->
 
@@ -158,14 +154,14 @@ layout: default
 
 {% include /cv.html %}
 
-
 {% include /portfolio.html %}
 
+{% include /blog.html %}
 
 {% include /contact.html %}
 
 
-{% include /blog.html %}
+
 
 </div>
 <!-- End #resp-tabs-container --> 
