--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ layout: default
 <!-- End wrapper -->
 
 <!-- Switcher -->
-<!-- <div id="custumize-style">
+<div id="custumize-style">
     <h2>Style Selector<a href="#" class="switcher"><i class="fa fa-cogs icon-switcher"></i></a></h2>
     <div>
         <h3>Theme Color</h3>
@@ -308,7 +308,7 @@ layout: default
     </div>
 
     <div id="button-reset"><a href="#" class="button color blue boxed">Reset</a></div>
-</div> -->
+</div>
 <!-- End Switcher -->
 
 
