--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@ layout: default
             <span class="tite-list">contact</span>
             <i class="fa fa-envelope icon_menu"></i> 
         </li>
+         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="hobbies">
+            <span class="tite-list">hobbies</span>
+            <i class="fa fa-snowflake-o icon_menu"></i>
+        </li>
 
        <!--  <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
@@ -144,7 +148,7 @@ layout: default
         </li>
 
         <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
-        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a>  -->
+        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a> 
     </ul>
     <!-- /resp-tabs-list -->
 
