adding hobbies section

--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@ layout: default
 
 {% include /contact.html %}
 
-{% include /hobbies.html %}
-
-<!-- {% include /blog.html %} -->
+{% include /blog.html %}
 
 
 
