adding hobbies section

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ layout: default
             <span class="tite-list">contact</span>
             <i class="fa fa-envelope icon_menu"></i> 
         </li>
-         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="hobbies">
-            <span class="tite-list">hobbies</span>
-            <i class="fa fa-snowflake-o icon_menu"></i>
+         <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
+            <span class="tite-list">blog</span>
+            <i class="fa fa-bicycle icon_menu"></i>
         </li>
 
        <!--  <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
@@ -165,7 +165,7 @@ layout: default
 
 {% include /contact.html %}
 
-{% include /blog.html %}
+<!-- {% include /blog.html %} -->
 
 
 
