adding hobbies section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ layout: default
         </li>
          <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
-            <i class="fa fa-bicycle icon_menu"></i>
+            <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 
        <!--  <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
@@ -165,7 +165,7 @@ layout: default
 
 {% include /contact.html %}
 
-<!-- {% include /blog.html %} -->
+{% include /blog.html %}
 
 
 
