--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@ layout: default
          <div id="profile_social">
            <!--  <h6>My Social Profiles</h6> -->
 			
+            <a style="visibility:hidden" href="{{site.twitter}}"><i  class="fa fa-twitter"></i></a>
+            <a style="visibility:hidden" href="{{site.linkedin}}"><i class="fa fa-linkedin"></i></a>
             <a href="{{site.github}}"><i class="fa fa-github"></i></a>
-            <!-- <a href="{{site.twitter}}"><i class="fa fa-twitter"></i></a>
-            <a href="{{site.linkedin}}"><i class="fa fa-linkedin"></i></a>
-            <a href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
-            <a href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a> -->
+            <a style="visibility:hidden" href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
+            <a style="visibility:hidden" href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>
             <div class="clear"></div>
         </div>
         <!-- End Name -->  
@@ -133,18 +133,17 @@ layout: default
             <i class="fa fa-briefcase icon_menu"></i>
         </li>
 
+        <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
+            <span class="tite-list">blog</span>
+            <i class="fa fa-spinner icon_menu"></i>
+        </li>
         <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
             <span class="tite-list">contact</span>
             <i class="fa fa-envelope icon_menu"></i> 
         </li>
 
-       <!--  <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
-            <span class="tite-list">blog</span>
-            <i class="fa fa-bullhorn icon_menu"></i>
-        </li>
-
         <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
-        <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a>  -->
+        <a href="cv_xlamourec.pdf" download id="downlowd"><i class="fa fa-download icon_print"></i> </a>
     </ul>
     <!-- /resp-tabs-list -->
 
@@ -159,9 +158,9 @@ layout: default
 
 {% include /portfolio.html %}
 
-{% include /contact.html %}
+{% include /hobbies.html %}
 
-<!-- {% include /blog.html %} -->
+{% include /contact.html %}
 
 
 
