--- a/index.html
+++ b/index.html
@@ -133,13 +133,14 @@ layout: default
             <i class="fa fa-briefcase icon_menu"></i>
         </li>
 
-        <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
-            <span class="tite-list">blog</span>
-            <i class="fa fa-spinner icon_menu"></i>
-        </li>
         <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
             <span class="tite-list">contact</span>
             <i class="fa fa-envelope icon_menu"></i> 
+        </li>
+
+        <li style="visibility:hidden" class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
+            <span class="tite-list">blog</span>
+            <i class="fa fa-spinner icon_menu"></i>
         </li>
 
         <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
@@ -158,9 +159,9 @@ layout: default
 
 {% include /portfolio.html %}
 
-{% include /hobbies.html %}
-
 {% include /contact.html %}
+
+{% include /hobbies.html %}
 
 
 
