--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ layout: default
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-            	I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industry.
-            </p>
+            {{ site.profile_desc }}
+        </p>
             
         </div>
         <!-- End Profile Description -->  
