--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ layout: default
            <!--  <h6>My Social Profiles</h6> -->
 			
             <a style="visibility:hidden" href="{{site.twitter}}"><i  class="fa fa-twitter"></i></a>
-            <a style="visibility:hidden" href="{{site.linkedin}}"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/xavier-lamourec-5925951ab/"><i class="fa fa-linkedin"></i></a>
             <a href="{{site.github}}"><i class="fa fa-github"></i></a>
             <a style="visibility:hidden" href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
             <a style="visibility:hidden" href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>
