--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ layout: default
             <a href="https://www.linkedin.com/in/xavier-lamourec-5925951ab/"><i class="fa fa-linkedin"></i></a>
             <a href="{{site.github}}"><i class="fa fa-github"></i></a>
             <a style="visibility:hidden" href="{{site.dribbble}}"><i class="fa fa fa-dribbble"></i></a>
-            <a style="visibility:hidden" href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>
+            <!--<a style="visibility:hidden" href="{{site.foursquare}}"><i class="fa fa-foursquare"></i></a>-->
             <div class="clear"></div>
         </div>
         <!-- End Name -->  
